Prevent text wrapping in columns
This prevents the ugly flickering in table width with
content being wrapped and unwrapped in response to
added or removed columns

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
 }
 
 table {
+    white-space: nowrap;
+
     border-collapse: collapse;
     font-size: small;
 }
